Update to CC images

--- a/lights/actions/rainbow.html
+++ b/lights/actions/rainbow.html
@@ -1,6 +1,6 @@
     <div class="image">
       <input type="hidden" name="action_type" value="rainbow">
-      <img src="/images/rainbow.png">
+      <img src="/images/rainbow.jpg">
     </div>
 
     <div class="content">
