--- a/lights/index.html
+++ b/lights/index.html
@@ -132,7 +132,7 @@
 
     <div class="centered card">
      <div class="image">
-       <img width=290 height=290 src="/images/rainbow.png">
+       <img width=290 height=290 src="/images/rainbow.jpg">
      </div> 
      <div class="content">
        <div class="header">Rainbow</div>
