--- a/lights/index.html
+++ b/lights/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Tree Lights 2.0</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css"/>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
